  Grokkers look the same as what they grok. This breaks backwards
  compatibility again, but it's an easy replace operation. Note that
  ``martian.directive`` takes the directive itself as an argument, and
  then optionally the same arguments as the ``bind`` method of
  directives (``name``, ``default`` and ``get_default``). It may be
  used multiple times.

* For symmetry, add an ``execute`` method to ``InstanceGrokker``.

0.9.7 (2008-05-29)
==================

Feature changes
---------------

* Added a ``MethodGrokker`` base class for grokkers that want to grok
  methods of a class rather than the whole class itself.  It works
  quite similar to the ``ClassGrokker`` regarding directive
  definition, except that directives evaluated not only on class (and
  possibly module) level but also for each method.  That way,
  directives can also be applied to methods (as decorators) in case
  they support it.

0.9.6 (2008-05-14)
==================

Feature changes
---------------

* Refactored the ``martian.Directive`` base class yet again to allow
  more declarative (rather than imperative) usage in grokkers.
  Directives themselves no longer have a ``get()`` method nor a
  default value factory (``get_default()``).  Instead you will have to
  "bind" the directive first which is typically done in a grokker.

* Extended the ``ClassGrokker`` baseclass with a standard ``grok()``
  method that allows you to simply declare a set of directives that
  are used on the grokked classes.  Then you just have to implement an
  ``execute()`` method that will receive the data from those
  directives as keyword arguments.  This simplifies the implementation
  of class grokkers a lot.

0.9.5 (2008-05-04)
==================

* ``scan_for_classes`` just needs a single second argument specifying
  an interface. The support for scanning for subclasses directly has
  been removed as it became unnecessary (due to changes in
  grokcore.component).

0.9.4 (2008-05-04)
==================
