@@ -5,9 +5,8 @@ from martian.components import GlobalGrokker, ClassGrokker, InstanceGrokker
 from martian.components import MethodGrokker
 from martian.util import scan_for_classes
 from martian.directive import Directive, MarkerDirective, MultipleTimesDirective
-from martian.directive import ONCE, MULTIPLE, DICT
+from martian.directive import ONCE, ONCE_NOBASE, MULTIPLE, DICT
 from martian.directive import CLASS, CLASS_OR_MODULE, MODULE
 from martian.directive import (
     validateText, validateInterface, validateClass, validateInterfaceOrClass)
-from martian.directive import baseclass
-from martiandirective import component, directive, priority
+from martiandirective import component, directive, priority, baseclass
